--- a/ref1-intro.bib
+++ b/ref1-intro.bib
@@ -1,4 +1,4 @@
-@article{10.1016/s0140-6736(13)62228-x, 
+@article{ReducingWaste-Lancet, 
 author = {Glasziou, Paul and Altman, Douglas G and Bossuyt, Patrick and Boutron, Isabelle and Clarke, Mike and Julious, Steven and Michie, Susan and Moher, David and Wager, Elizabeth}, 
 title = {{Reducing waste from incomplete or unusable reports of biomedical research}}, 
 issn = {0140-6736}, 
@@ -11,7 +11,12 @@ volume = {383},
 journal = {The Lancet}, 
 year = {2014}
 }
-@article{10.1038/d41586-017-08589-4, 
+@article{Ethereum-Wood, 
+author = {Wood, Gavin}, 
+title = {{Ethereum:  a secure decentralised generalised transaction ledger}}, 
+local-url = {file://localhost/Users/bt_neurospin/Downloads/Paper.pdf}
+}
+@article{Bitcoin-Nature-focus, 
 author = {Extance, Andy}, 
 title = {{Could Bitcoin technology help science?}}, 
 issn = {0028-0836}, 
@@ -25,7 +30,7 @@ journal = {Nature},
 local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Extance-Could%20Bitcoin%20technology%20help%20science--2017-Nature.pdf}, 
 year = {2017}
 }
-@article{undefined, 
+@article{Zeeshan2018-oro-open, 
 author = {Zeeshan, Jan and Allan, Third and Michelle, Bachler and John, Domingue}, 
 title = {{Peer-reviews on the blockchain}}, 
 abstract = {{Peer-reviewing holds a signiﬁcant importance in the process of scientiﬁc publishing. The process of peer-reviewing has been criticized for its defects, but research communities have faith in it, and hence, it is perceived as the backbone of scientiﬁc publishing. The process needs improvements in a number of ways, i.e, establishing trust in the process, preventing abuse, bringing transparency in the process and keeping the integrity of data intact. Moreover, the activity of peer-reviewing is carried out without any formal incentives. We present considerations in refreshing peer-review, and our approach to experiment in this space.}}, 
@@ -33,7 +38,7 @@ keywords = {Peer-review,Decentralization,Blockchain,Incentives},
 local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/BLOCKCHAIN_for_SCIENCE-literature2020/Peer_reviews_on_the_blockchain.pdf}, 
 year = {2018}
 }
-@article{10.3389/fbloc.2019.00016, 
+@article{ReviewBlockchain2019, 
 author = {Leible, Stephan and Schlager, Steffen and Schubotz, Moritz and Gipp, Bela}, 
 title = {{A Review on Blockchain Technology and Blockchain Projects Fostering Open Science}}, 
 doi = {10.3389/fbloc.2019.00016}, 
@@ -44,7 +49,7 @@ journal = {Frontiers in Blockchain},
 local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/BLOCKCHAIN_for_SCIENCE-literature2020/fbloc-02-00016.pdf}, 
 year = {2019}
 }
-@article{10.6084/m9.figshare.5607778, 
+@article{vanRossum2017-DigSci, 
 author = {Rossum, Dr. Joris van}, 
 editor = {Science, Digital}, 
 title = {{Blockchain for Research - Perspectives on a New Paradigm for Scholarly Communication}}, 
@@ -57,7 +62,7 @@ local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Ross
 year = {2017}, 
 rating = {4}
 }
-@article{10.5281/zenodo.60054, 
+@article{AES, 
 author = {b8d5ad9d974a44e7e2882f986467f4d3}, 
 title = {{Towards Open Science:  The Case for a Decentralized
 Autonomous Academic Endorsement System}}, 
@@ -67,7 +72,7 @@ local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/BLOCKCHAIN_for
 year = {2016}, 
 rating = {5}
 }
-@article{Bitcoin, 
+@article{BitcoinSatoshi, 
 author = {Nakamoto, Satoshi}, 
 title = {{Bitcoin: A Peer-to-Peer Electronic Cash System}}, 
 url = {www.bitcoin.org}, 
