--- a/ref3-system.bib
+++ b/ref3-system.bib
@@ -1,3 +1,9 @@
+@misc{Compound, 
+author = {}, 
+title = {{Compound: The Money Market Protocol}}, 
+url = {\url{https://compound.finance/documents/Compound.Whitepaper.pdf}},
+}
+
 @misc{DSR, 
 author = {}, 
 title = {{Pot: Detailed Documentation}}, 
