--- a/ref3-system.bib
+++ b/ref3-system.bib
@@ -1,9 +1,13 @@
+@misc{Gitcoin, 
+author = {}, 
+title = {{Gitcoin}}, 
+url = {\url{https://gitcoin.co/}},
+}
 @misc{Compound, 
 author = {}, 
 title = {{Compound: The Money Market Protocol}}, 
 url = {\url{https://compound.finance/documents/Compound.Whitepaper.pdf}},
 }
-
 @misc{DSR, 
 author = {}, 
 title = {{Pot: Detailed Documentation}}, 
