--- a/ref1-intro.bib
+++ b/ref1-intro.bib
@@ -1,3 +1,9 @@
+@misc{BlockchainforScience - living document, 
+author = {Bartling, Sönke}, 
+title = {{Blockchain for Science}}, 
+url = {https://docs.google.com/document/d/1Uhjb4K69l0bSx7UXYUStV\_rjuPC7VGo0ERa-7xEsr58/edit\#}, 
+year = {2016}
+}
 @article{ReducingWaste-Lancet, 
 author = {Glasziou, Paul and Altman, Douglas G and Bossuyt, Patrick and Boutron, Isabelle and Clarke, Mike and Julious, Steven and Michie, Susan and Moher, David and Wager, Elizabeth}, 
 title = {{Reducing waste from incomplete or unusable reports of biomedical research}}, 
