--- a/ref3-system.bib
+++ b/ref3-system.bib
@@ -6,7 +6,7 @@ url = {\url{https://gitcoin.co/}},
 @misc{Compound, 
 author = {}, 
 title = {{Compound: The Money Market Protocol}}, 
-url = {\url{https://compound.finance/documents/Compound.Whitepaper.pdf}},
+url = {\url{https://compound.finance}},
 }
 @misc{DSR, 
 author = {}, 
@@ -42,6 +42,24 @@ url = {\url{https://github.com/OpenZeppelin/openzeppelin-contracts}},
 author = {}, 
 title = {{Rinkeby Ethereum Testnet}}, 
 url = {\url{https://www.rinkeby.io/}},
+}
+@article{LiberalRadicalism, 
+author = {Vitalik Buterin, Zoë Hitzig, E. Glen Wey}, 
+title = {{Liberal Radicalism: A Flexible Design For Philanthropic Matching Funds}}, 
+pages = {37}, 
+year = {2018}
+}
+@article{ZKSNARKs, 
+author = {Christian Reitwießner}, 
+title = {{zkSNARKs in a Nutshell}}, 
+pages = {15}, 
+year = {}
+}
+@article{ZeroKnoledge, 
+author = {Manuel Blum, Alfredo De Santis, Silvio Micali, Giuseppe Persiano}, 
+title = {{Non-Interactive Zero-Knowledge}}, 
+pages = {1118}, 
+year = {1991}
 }
 @article{Haber-Secure, 
 author = {Haber, Stuart and Stornetta, W. Scott}, 
